--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,8 @@
     "bootstrap": "^4.5.0",
     "bootstrap-vue": "^2.15.0",
     "core-js": "^3.6.5",
+    "google-maps-api-loader": "^1.1.1",
+    "sass-loader": "^9.0.2",
     "vue": "^2.6.11",
     "vue-cookies": "^1.7.2",
     "vue-google-oauth2": "^1.5.5",
