--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost/ssafydb?autoReconnect=true&useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
-spring.datasource.password=SSAFY
+spring.datasource.password=root
 
 spring.security.oauth2.client.registration.google.client-id=376396557114-ohob5o7cq060d2amdkdj86jl7ldg61jb.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=mBSY93hTwJE5gh8YHPcO5J-9
