--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost/ssafydb?autoReconnect=true&useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
 spring.datasource.password=ssafy
