--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=8080
+
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost/ssafydb?autoReconnect=true&useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
