--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,7 @@
     "bootstrap-vue": "^2.15.0",
     "core-js": "^3.6.5",
     "google-maps-api-loader": "^1.1.1",
-    "sass-loader": "^9.0.2",
+    "vee-validate": "^3.3.9",
     "vue": "^2.6.11",
     "vue-cli": "^2.9.6",
     "vue-cookies": "^1.7.2",
@@ -37,6 +37,8 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^9.0.3",
     "vue-cli-plugin-vuetify": "~2.0.7",
     "vue-template-compiler": "^2.6.11"
   },
